# mpyc.exponentiation

./: CITATION.cff  README.md  setup.cfg
tno/mpc/mpyc/exponentiation/: __init__.py  exponent.py  precision_ledger.py  utils.py
tno/mpc/mpyc/exponentiation/test/: __init__.py  test_exponent.py
