[metadata]
name = tno.mpc.mpyc.exponentiation
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = A generic extension to MPyC that allows you to securely compute a^[x], where a is a non-negative, plain-text base (floating point or integer) and x is a secure number (SecFxp or SecInt)
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    MPyC
    exponentiation
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.mpyc.exponentiation/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/mpyc/exponentiation/1.6.2
    Source Code = https://github.com/TNO-MPC/mpyc.exponentiation
version = attr: tno.mpc.mpyc.exponentiation.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.mpyc.exponentiation
    tno.mpc.mpyc.exponentiation.test
zip_safe = False
install_requires =
    tno.mpc.mpyc.stubs >= 0.3.0
    mpyc >= 0.6.8
namespace_packages =
    tno
    tno.mpc
    tno.mpc.mpyc

[options.package_data]
tno.mpc.mpyc.exponentiation = py.typed

[options.extras_require]
gmpy =
    gmpy2>=2.1.0
tests =
    pytest
    pytest-asyncio
